--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,18 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Christy Coghlan
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: A Christy Coghlan website
 
 # Your name to show in the footer
-author: Some Person
+author: Christy Coghlan
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  LinkedIn: "https://www.linkedin.com/in/christy-coghlan"
 
 # --- Logo --- #
 
@@ -38,10 +34,9 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  facebook: coghlanc
+  github: ccogs
+  twitter: cacoghlan
   rss: true
 #  reddit: yourname
 #  linkedin: daattali
